Taking pilot users from configuration, pilot feature flag middleware working and integrated